reports/example-usage.log
Traceback (most recent call last):
  File "/home/runner/work/fragment-mnp/fragment-mnp/.venv/lib/python3.9/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/home/runner/work/fragment-mnp/fragment-mnp/.venv/lib/python3.9/site-packages/nbclient/client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/home/runner/work/fragment-mnp/fragment-mnp/.venv/lib/python3.9/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/home/runner/work/fragment-mnp/fragment-mnp/.venv/lib/python3.9/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "/opt/hostedtoolcache/Python/3.9.15/x64/lib/python3.9/asyncio/base_events.py", line 647, in run_until_complete
    return future.result()
  File "/home/runner/work/fragment-mnp/fragment-mnp/.venv/lib/python3.9/site-packages/nbclient/client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "/home/runner/work/fragment-mnp/fragment-mnp/.venv/lib/python3.9/site-packages/nbclient/client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "/home/runner/work/fragment-mnp/fragment-mnp/.venv/lib/python3.9/site-packages/nbclient/client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
from fragmentmnp import FragmentMNP
from fragmentmnp.examples import minimal_config, minimal_data
import matplotlib.pyplot as plt
import numpy as np

# Create the model and pass it config and data. minimal_config and
# minimal_data are an examples of a dicts with only required values.
# full_{config|data} are examples of a dicts with all values given
fmnp = FragmentMNP(minimal_config, minimal_data)
# Run the model
output = fmnp.run()
------------------

Traceback [0;36m(most recent call last)[0m:

  File [1;32m~/work/fragment-mnp/fragment-mnp/.venv/lib/python3.9/site-packages/IPython/core/interactiveshell.py:3398[0m in [1;35mrun_code[0m
    exec(code_obj, self.user_global_ns, self.user_ns)

  Input [1;32mIn [1][0m in [1;35m<cell line: 1>[0m
    from fragmentmnp import FragmentMNP

  File [1;32m~/work/fragment-mnp/fragment-mnp/src/fragmentmnp/__init__.py:9[0m in [1;35m<module>[0m
    from .fragmentmnp import FragmentMNP

[0;36m  File [0;32m~/work/fragment-mnp/fragment-mnp/src/fragmentmnp/fragmentmnp.py:7[0;36m in [0;35m<module>[0;36m[0m
[0;31m    from .output import FMNPOutput[0m

[0;36m  File [0;32m~/work/fragment-mnp/fragment-mnp/src/fragmentmnp/output.py:59[0;36m[0m
[0;31m    y: str = 'c')[0m
[0m                 ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (output.py, line 59)

